@@ -77,9 +77,12 @@ Ext.extend(GoodNewsResource.page.UpdateGoodNewsResourceContainer,MODx.page.Updat
         });
         
         btns.push({
-            text: _('help_ex')
+            text: '<i class="icon icon-question-circle icon-lg"></i>&nbsp;' + _('help_ex')
             ,id: 'modx-abtn-help'
-            ,handler: MODx.loadHelpPane
+            ,handler: function(){
+                MODx.helpUrl = GoodNewsResource.helpUrl;
+                MODx.loadHelpPane();
+            }
         });
         
         return btns;
