@@ -23,9 +23,9 @@
  *
  * @package goodnews
  */
- 
-require_once $modx->getOption('manager_path', null, MODX_MANAGER_PATH).'controllers/default/resource/update.class.php';
 
+require_once dirname(dirname(dirname(dirname(__FILE__)))) . '/model/goodnews/goodnews.class.php';
+require_once $modx->getOption('manager_path', null, MODX_MANAGER_PATH).'controllers/default/resource/update.class.php';
 
 /**
  * Loads the update GoodNewsResourceMailing page
@@ -80,6 +80,7 @@ class GoodNewsResourceMailingUpdateManagerController extends ResourceUpdateManag
         // <![CDATA[
         GoodNewsResource.assets_url = "'.$goodNewsAssetsUrl.'";
         GoodNewsResource.connector_url = "'.$connectorUrl.'";
+        GoodNewsResource.helpUrl = "'.GoodNews::HELP_URL.'";
         MODx.config.publish_document = "'.$this->canPublish.'";
         MODx.onDocFormRender = "'.$this->onDocFormRender.'";
         MODx.ctx = "'.$this->resource->get('context_key').'";
