@@ -18,6 +18,7 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 - Added link_tag_scheme to GoodNewsGetNewsletters Snippet
 - Changed GoodNews help URL (new docs site)
 - Fixed some old ExtJS legacy code for resource panels (GoodNewsResourceContainer, GoodNewsResourceMailing)
+- Added help buttons in GoodNews resources (container, mailing)
 
 ## [1.5.1-pl2] - 2018-07-26
 ### Fixed
